--- a/src/index.css
+++ b/src/index.css
@@ -65,6 +65,7 @@ nav > img {
 
 .card {
   max-width: 180px;
+  position: relative;
 }
 
 .card > img {
@@ -95,4 +96,14 @@ nav > img {
     flex-wrap: nowrap;
     gap: 20px;
     overflow-x: auto;
+}
+
+.card--soldOut {
+   position: absolute;
+    top: 6px;
+    left: 6px;
+    background-color: white;
+    padding: 5px 7px;
+    border-radius: 2px;
+    font-weight: bold;
 }
